2.3/2.3_ingress-grpc.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grpc
  annotations:
    kubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
    # ingress.kubernetes.io/protocol: h2c
spec:
  rules:
    - host: check.my.lol
      http:
        paths: 
         - path: /
           backend:
              serviceName: test-grpc
              servicePort: 50053
